force-app/main/default/objects/Key_Relationship__c/Key_Relationship__c.object-meta.xml
<CustomObject>
    <description>Tracks key EDF staff and volunteer relationships with donors and is related to Development Strategy__c</description>
    <label>Key Relationship</label>
    <nameField>
        <displayFormat>WPR-{0000}</displayFormat>
        <label>Workplan Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>