force-app/main/default/objects/Key_Relationship__c/fields/Development_Workplan__c.field-meta.xml
<CustomField>
    <fullName>Development_Workplan__c</fullName>
    <label>Development Workplan</label>
    <referenceTo>Development_Strategy__c</referenceTo>
    <relationshipName>Workplan_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>