force-app/main/default/objects/Key_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>npe4__Relationship__c</referenceTo>
    <relationshipLabel>Key Relationships</relationshipLabel>
    <relationshipName>Key_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>